# socow

./: .clang-format  .gitignore  .gitlab-ci.yml  CMakeLists.txt  CMakePresets.json  README.md
ci-extra/: build.sh  check-clang-format.sh  check-line-breaks.sh  test-valgrind.sh  test.sh
cmake/: CompilerWarnings.cmake  ConfigureCompiler.cmake  Dependencies.cmake
src/: CMakeLists.txt  socow-vector.h
test/: CMakeLists.txt  element.cpp  element.h  test-utils.h  traits-test.cpp  vector-test.cpp
